Add login and token introspection flow to API

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,1 +1,7 @@
 PORT=3001
+OAUTH_CLIENT_ID=""
+OAUTH_CLIENT_SECRET=""
+OAUTH_AUTH_SERVER="https://accounts.google.com/o/oauth2/v2"
+OAUTH_INTROSPECTION_SERVER="https://oauth2.googleapis.com"
+FRONTEND_ORIGIN="http://localhost:3000"
+REDIRECT_URI="http://localhost:3001/oauth/code"
