Fetch oauth endpoints from provider

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,7 +1,9 @@
 PORT=3001
 OAUTH_CLIENT_ID=""
 OAUTH_CLIENT_SECRET=""
-OAUTH_AUTH_SERVER="https://accounts.google.com/o/oauth2/v2"
-OAUTH_INTROSPECTION_SERVER="https://oauth2.googleapis.com"
+OID_CONFIG_ENDPOINT="https://accounts.google.com/.well-known/openid-configuration"
 FRONTEND_ORIGIN="http://localhost:3000"
 REDIRECT_URI="http://localhost:3001/oauth/code"
+# Random string used to sign cookies. Should be kept secret and should have enough entropy.
+# An appropriate secret value can be generated with "openssl rand -hex 20"
+COOKIE_SECRET=""
