--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,9 +1,18 @@
 PORT=3001
-OAUTH_CLIENT_ID=""
-OAUTH_CLIENT_SECRET=""
-OID_CONFIG_ENDPOINT="https://accounts.google.com/.well-known/openid-configuration"
 FRONTEND_ORIGIN="http://localhost:3000"
 REDIRECT_URI="http://localhost:3001/oauth/code"
 # Random string used to sign cookies. Should be kept secret and should have enough entropy.
 # An appropriate secret value can be generated with "openssl rand -hex 20"
 COOKIE_SECRET=""
+
+# Each provider has to be configured individually
+# This example supports Microsoft and Google
+## Google
+GOOGLE_OAUTH_CLIENT_ID=""
+GOOGLE_OAUTH_CLIENT_SECRET=""
+GOOGLE_OID_CONFIG_ENDPOINT="https://accounts.google.com/.well-known/openid-configuration"
+## Microsoft
+MICROSOFT_OAUTH_CLIENT_ID=""
+MICROSOFT_OAUTH_CLIENT_SECRET=""
+MICROSOFT_OID_CONFIG_ENDPOINT="https://login.microsoftonline.com/common/v2.0/.well-known/openid-configuration"
+
